--- a/AutoCAD_Windows/AutoCAD_Windows/Property/ListViewItems/LVI_Button.xaml
+++ b/AutoCAD_Windows/AutoCAD_Windows/Property/ListViewItems/LVI_Button.xaml
@@ -1,4 +1,4 @@
-﻿<ListViewItem x:Class="WindowDictionary.Property.ListItemButton"
+﻿<ListViewItem x:Class="WindowDictionary.Property.ListViewItems.LVI_Button"
               xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
               xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
               xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -15,29 +15,19 @@
     <ListViewItem.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="../StyleDictionary.xaml" />
+                <ResourceDictionary Source="../../StyleDictionary.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </ListViewItem.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition />
-            <ColumnDefinition />
-            <ColumnDefinition />
-            <ColumnDefinition />
-            <ColumnDefinition />
+            <ColumnDefinition Width="3*"/>
+            <ColumnDefinition Width="2*"/>
         </Grid.ColumnDefinitions>
-        <TextBlock Grid.ColumnSpan="3">
-            <TextBlock.Text>
-                <Binding Path="Label" />
-            </TextBlock.Text>
-        </TextBlock>
-        <Button Click="Button_Click"
-                Grid.Column="2"
-                Grid.ColumnSpan="3">
-            <Button.Content>
-                <Binding Path="ButtonText"/>
-            </Button.Content>
-        </Button>
+        <TextBlock x:Name="textblock"
+                   x:FieldModifier="private" />
+        <Button x:Name="button"
+                x:FieldModifier="private"
+                Grid.Column="1" />
     </Grid>
 </ListViewItem>
