--- a/AutoCAD_Windows/AutoCAD_Windows/Property/ListViewItems/LVI_CheckBox.xaml
+++ b/AutoCAD_Windows/AutoCAD_Windows/Property/ListViewItems/LVI_CheckBox.xaml
@@ -1,4 +1,4 @@
-﻿<ListViewItem x:Class="WindowDictionary.Property.ListItemBoolean"
+﻿<ListViewItem x:Class="WindowDictionary.Property.ListViewItems.LVI_CheckBox"
               xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
               xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
               xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -15,26 +15,19 @@
     <ListViewItem.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="../StyleDictionary.xaml" />
+                <ResourceDictionary Source="../../StyleDictionary.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </ListViewItem.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition />
-            <ColumnDefinition />
-            <ColumnDefinition />
-            <ColumnDefinition />
-            <ColumnDefinition />
+            <ColumnDefinition Width="3*" />
+            <ColumnDefinition Width="2*"/>
         </Grid.ColumnDefinitions>
-        <TextBlock Grid.ColumnSpan="3">
-            <TextBlock.Text>
-                <Binding Path="PropertyName" />
-            </TextBlock.Text></TextBlock>
-        <CheckBox Grid.Column="3">
-            <CheckBox.IsChecked>
-                <Binding Path="Value" />
-            </CheckBox.IsChecked>
-        </CheckBox>
+        <TextBlock x:Name="textblock"
+                   x:FieldModifier="private" />
+        <CheckBox x:Name="checkbox"
+                  x:FieldModifier="private"
+                  Grid.Column="1" />
     </Grid>
 </ListViewItem>
