--- a/AutoCAD_Windows/AutoCAD_Windows/Property/ListViewItems/LVI_ComboBox.xaml
+++ b/AutoCAD_Windows/AutoCAD_Windows/Property/ListViewItems/LVI_ComboBox.xaml
@@ -1,7 +1,7 @@
-﻿<ListViewItem x:Class="WindowDictionary.Property.ListItemInteger"
+﻿<ListViewItem x:Class="WindowDictionary.Property.ListViewItems.LVI_ComboBox"
               xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
               xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
               xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
               xmlns:local="clr-namespace:WindowDictionary.Property"
               xmlns:converter="clr-namespace:WindowDictionary.Converters"
@@ -18,36 +18,25 @@
     <ListViewItem.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="../StyleDictionary.xaml" />
+                <ResourceDictionary Source="../../StyleDictionary.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </ListViewItem.Resources>
-    <Grid Background="Transparent">
+    <Grid>
         <Grid.Resources>
             <converter:IntegerConverter x:Key="IntegerConverter" />
         </Grid.Resources>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition />
-            <ColumnDefinition />
-            <ColumnDefinition />
-            <ColumnDefinition />
-            <ColumnDefinition />
+            <ColumnDefinition Width="2*"/>
+            <ColumnDefinition Width="3*"/>
         </Grid.ColumnDefinitions>
-        <TextBlock Grid.ColumnSpan="2">
-            <TextBlock.Text>
-                <Binding Path="Item.PropertyName"/>
-            </TextBlock.Text>
-        </TextBlock>
-        <TextBox x:Name="box"
-                 Grid.Column="2"
-                 Grid.ColumnSpan="3"
-                 PreviewTextInput="TextBox_Integer_PreviewTextInput"
-                 PreviewKeyDown="TextBox_Integer_PreviewKeyDown">
-            <TextBox.Text>
-                <Binding Path="Item.Value" />
-            </TextBox.Text>
-        </TextBox>
+        <TextBlock x:Name="textblock"
+                   x:FieldModifier="private"/>
+        <ComboBox x:Name="combobox"
+                  x:FieldModifier="private"
+                  Grid.Column="1" />
         <Popup x:Name="popup"
+               x:FieldModifier="private"
                AllowsTransparency="True"
                IsOpen="False"
                Placement="Top"
@@ -56,7 +45,7 @@
                Visibility="Visible"
                VerticalOffset="-1">
             <Popup.PlacementTarget>
-                <Binding ElementName="box" />
+                <Binding ElementName="combobox" />
             </Popup.PlacementTarget>
             <Border Background="White"
                     BorderBrush="Red"
@@ -64,12 +53,12 @@
                     CornerRadius="3"
                     Margin="1,1,1,1">
                 <TextBlock x:Name="popupText"
+                           x:FieldModifier="private"
                            Foreground="Red"
                            HorizontalAlignment="Center"
                            VerticalAlignment="Center"
                            Margin="0"
-                           TextWrapping="Wrap">
-                </TextBlock>
+                           TextWrapping="Wrap" />
             </Border>
         </Popup>
     </Grid>
