--- a/AutoCAD_Windows/AutoCAD_Windows/Property/ListViewItems/LVI_Range.xaml
+++ b/AutoCAD_Windows/AutoCAD_Windows/Property/ListViewItems/LVI_Range.xaml
@@ -1,51 +1,51 @@
-﻿<ListViewItem x:Class="WindowDictionary.Property.ListItemDouble"
+﻿<ListViewItem x:Class="WindowDictionary.Property.ListViewItems.LVI_Range"
               xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
               xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
               xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
               xmlns:local="clr-namespace:WindowDictionary.Property"
               xmlns:converter="clr-namespace:WindowDictionary.Converters"
               mc:Ignorable="d"
+              Background="Transparent"
+              BorderThickness="1"
+              BorderBrush="Transparent"
               MinHeight="20"
               MinWidth="200"
               HorizontalContentAlignment="Stretch"
               VerticalContentAlignment="Stretch"
-              BorderThickness="1"
               Margin="0"
               Padding="0">
     <ListViewItem.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="../StyleDictionary.xaml" />
+                <ResourceDictionary Source="../../StyleDictionary.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </ListViewItem.Resources>
     <Grid>
-        <Grid.Resources>
-            <converter:IntegerConverter x:Key="IntegerConverter" />
-        </Grid.Resources>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition />
-            <ColumnDefinition />
-            <ColumnDefinition />
-            <ColumnDefinition />
-            <ColumnDefinition />
+            <ColumnDefinition Width="2*" />
+            <ColumnDefinition Width="3*" />
         </Grid.ColumnDefinitions>
-        <TextBlock Grid.ColumnSpan="2">
-            <TextBlock.Text>
-                <Binding Path="Item.PropertyName"/>
-            </TextBlock.Text>
-        </TextBlock>
-        <TextBox x:Name="box"
-                 Grid.Column="2"
-                 Grid.ColumnSpan="3"
-                 PreviewTextInput="TextBox_Double_PreviewTextInput"
-                 PreviewKeyDown="TextBox_Double_PreviewKeyDown">
-            <TextBox.Text>
-                <Binding Path="Item.Value" />
-            </TextBox.Text>
-        </TextBox>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="22" />
+            <RowDefinition Height="27" />
+            <RowDefinition Height="3" />
+            <RowDefinition Height="58" />
+        </Grid.RowDefinitions>
+        <TextBlock Text="Logic Gate" />
+        <CheckBox Grid.Column="1"/>
+        <TextBlock Grid.Row="1"
+                   Text="Range Type" />
+        <ComboBox x:Name="combobox"
+                  x:FieldModifier="private"
+                  Grid.Column="1"
+                  Grid.Row="1"
+                  Height="25"
+                  Margin="5,0,5,0"/>
+        <!-- 
         <Popup x:Name="popup"
+               x:FieldModifier="private"
                AllowsTransparency="True"
                IsOpen="False"
                Placement="Top"
@@ -54,7 +54,7 @@
                Visibility="Visible"
                VerticalOffset="-1">
             <Popup.PlacementTarget>
-                <Binding ElementName="box" />
+                <Binding ElementName="combobox" />
             </Popup.PlacementTarget>
             <Border Background="White"
                     BorderBrush="Red"
@@ -62,12 +62,26 @@
                     CornerRadius="3"
                     Margin="1,1,1,1">
                 <TextBlock x:Name="popupText"
+                           x:FieldModifier="private"
                            Foreground="Red"
                            HorizontalAlignment="Center"
                            VerticalAlignment="Center"
                            Margin="0"
-                           TextWrapping="Wrap"></TextBlock>
+                           TextWrapping="Wrap" />
             </Border>
         </Popup>
+        -->
+        <UniformGrid Grid.ColumnSpan="2"
+                     Grid.Row="3"
+                     Rows="2">
+            <TextBlock Text="Minimum" />
+            <TextBox x:Name="Min"
+                     x:FieldModifier="private"
+                     Margin="5,0,5,0"/>
+            <TextBlock Text="Maximum" />
+            <TextBox x:Name="Max"
+                     x:FieldModifier="private"
+                     Margin="5,0,5,0"/>
+        </UniformGrid>
     </Grid>
 </ListViewItem>
