--- a/AutoCAD_Windows/AutoCAD_Windows/Property/ListViewItems/LVI_ValueList.xaml
+++ b/AutoCAD_Windows/AutoCAD_Windows/Property/ListViewItems/LVI_ValueList.xaml
@@ -1,4 +1,4 @@
-﻿<ListViewItem x:Class="WindowDictionary.Property.ListViewSelection"
+﻿<ListViewItem x:Class="WindowDictionary.Property.ListViewItems.LVI_ValueList"
               xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
               xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
               xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -18,63 +18,54 @@
     <ListViewItem.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="../StyleDictionary.xaml" />
+                <ResourceDictionary Source="../../StyleDictionary.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </ListViewItem.Resources>
-    <Grid Background="Transparent">
-        <Grid.Resources>
-            <converter:IntegerConverter x:Key="IntegerConverter" />
-        </Grid.Resources>
+    <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="25" />
-            <RowDefinition />
+            <RowDefinition Height="*"/>
             <RowDefinition Height="35" />
             <RowDefinition Height="90" />
         </Grid.RowDefinitions>
-        <TextBlock Grid.ColumnSpan="5"
+        <TextBlock x:Name="textblock"
+                   x:FieldModifier="private"
                    Margin="5,5,5,5"
-                   VerticalAlignment="Top">
-            <TextBlock.Text>
-                <Binding Path="Label" />
-            </TextBlock.Text></TextBlock>
-        <ListView x:Name="list"
-                 Grid.Row="1"
-                 Grid.ColumnSpan="5"
-                 Margin="5,5,5,5">
-            <ListView.ItemsSource>
-                <Binding Path="Item.Values" />
-            </ListView.ItemsSource>
-        </ListView>
-        <TextBox x:Name="text"
+                   VerticalAlignment="Top" />
+        <ListView x:Name="listview"
+                  x:FieldModifier="private"
+                  Grid.Row="1"
+                  Margin="5,5,5,5" />
+        <TextBox x:Name="textbox"
+                 x:FieldModifier="private"
                  Grid.Row="2"
-                 Margin="5,5"
-                 PreviewKeyDown="text_PreviewKeyDown"
-                 PreviewTextInput="text_PreviewTextInput"/>
-        <UniformGrid Grid.Row="3"
-                     Rows="3"
-                     Columns="2"
-                     HorizontalAlignment="Center">
-            <Button x:Name="Add_Button"
-                    Click="Add_Button_Click"
+                 Margin="5,5" />
+        <UniformGrid Columns="2"
+                     Grid.Row="3"
+                     HorizontalAlignment="Center"
+                     Rows="3">
+            <Button x:Name="addbutton"
+                    x:FieldModifier="private"
                     Content="Add" />
-            <Button x:Name="Remove_Button"
-                    Click="Remove_Button_Click"
+            <Button x:Name="removebutton"
+                    x:FieldModifier="private"
                     Content="Remove" />
-            <Button x:Name="Up_Button"
-                    Click="Up_Button_Click"
+            <Button x:Name="upbutton"
+                    x:FieldModifier="private"
                     Content="Up" />
-            <Button x:Name="Top_Button"
-                    Click="Top_Button_Click"
+            <Button x:Name="topbutton"
+                    x:FieldModifier="private"
                     Content="Top" />
-            <Button x:Name="Down_Button"
-                    Click="Down_Button_Click"
+            <Button x:Name="downbutton"
+                    x:FieldModifier="private"
                     Content="Down" />
-            <Button x:Name="Bottom_Button"
-                    Click="Bottom_Button_Click"
+            <Button x:Name="bottombutton"
+                    x:FieldModifier="private"
                     Content="Bottom" />
         </UniformGrid>
         <Popup x:Name="popup"
+               x:FieldModifier="private"
                AllowsTransparency="True"
                IsOpen="False"
                Placement="Top"
@@ -83,19 +74,20 @@
                Visibility="Visible"
                VerticalOffset="-1">
             <Popup.PlacementTarget>
-                <Binding ElementName="text" />
+                <Binding ElementName="textbox" />
             </Popup.PlacementTarget>
             <Border Background="White"
                     BorderBrush="Red"
                     BorderThickness="1"
                     CornerRadius="3"
                     Margin="1,1,1,1">
-                <TextBlock x:Name="popupText"
+                <TextBlock x:Name="popuptextblock"
+                           x:FieldModifier="private"
                            Foreground="Red"
                            HorizontalAlignment="Center"
                            VerticalAlignment="Center"
                            Margin="0"
-                           TextWrapping="Wrap"></TextBlock>
+                           TextWrapping="Wrap" />
             </Border>
         </Popup>
     </Grid>
