--- a/AutoCAD_Windows/AutoCAD_Windows/Property/ListViewItems/LVI_Range.xaml
+++ b/AutoCAD_Windows/AutoCAD_Windows/Property/ListViewItems/LVI_Range.xaml
@@ -4,7 +4,7 @@
               xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
               xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
               xmlns:local="clr-namespace:WindowDictionary.Property"
-              xmlns:converter="clr-namespace:WindowDictionary.Converters"
+              xmlns:logic="clr-namespace:WindowDictionary.Property.Logic"
               mc:Ignorable="d"
               Background="Transparent"
               BorderThickness="1"
@@ -24,64 +24,130 @@
     </ListViewItem.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="2*" />
-            <ColumnDefinition Width="3*" />
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="22" />
-            <RowDefinition Height="27" />
-            <RowDefinition Height="3" />
-            <RowDefinition Height="58" />
-        </Grid.RowDefinitions>
-        <TextBlock Text="Logic Gate" />
-        <CheckBox Grid.Column="1"/>
-        <TextBlock Grid.Row="1"
-                   Text="Range Type" />
-        <ComboBox x:Name="combobox"
+        <Grid.Resources>
+            <HierarchicalDataTemplate DataType="{x:Type logic:Range}"
+                                      ItemsSource="{Binding Path=RangeCollection}">
+                <TextBlock>
+                    <TextBlock.Text>
+                        <Binding Path="Operator" />
+                    </TextBlock.Text></TextBlock>
+            </HierarchicalDataTemplate>
+        </Grid.Resources>
+        <TreeView x:Name="tree"
                   x:FieldModifier="private"
-                  Grid.Column="1"
-                  Grid.Row="1"
-                  Height="25"
-                  Margin="5,0,5,0"/>
-        <!-- 
-        <Popup x:Name="popup"
-               x:FieldModifier="private"
-               AllowsTransparency="True"
-               IsOpen="False"
-               Placement="Top"
-               PopupAnimation="Slide"
-               StaysOpen="True"
-               Visibility="Visible"
-               VerticalOffset="-1">
-            <Popup.PlacementTarget>
-                <Binding ElementName="combobox" />
-            </Popup.PlacementTarget>
-            <Border Background="White"
-                    BorderBrush="Red"
-                    BorderThickness="1"
-                    CornerRadius="3"
-                    Margin="1,1,1,1">
-                <TextBlock x:Name="popupText"
-                           x:FieldModifier="private"
-                           Foreground="Red"
-                           HorizontalAlignment="Center"
-                           VerticalAlignment="Center"
-                           Margin="0"
-                           TextWrapping="Wrap" />
-            </Border>
-        </Popup>
-        -->
-        <UniformGrid Grid.ColumnSpan="2"
-                     Grid.Row="3"
-                     Rows="2">
-            <TextBlock Text="Minimum" />
-            <TextBox x:Name="Min"
-                     x:FieldModifier="private"
-                     Margin="5,0,5,0"/>
-            <TextBlock Text="Maximum" />
-            <TextBox x:Name="Max"
-                     x:FieldModifier="private"
-                     Margin="5,0,5,0"/>
-        </UniformGrid>
+                  ItemsSource="{Binding Path=RangeCollection}"
+                  SelectedItemChanged="tree_SelectedItemChanged"
+                  MinWidth="100">
+        </TreeView>
+        <Grid Grid.Column="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="2*" />
+                <ColumnDefinition Width="3*" />
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="22" />
+                <RowDefinition Height="27" />
+                <RowDefinition Height="58" />
+                <RowDefinition Height="27" />
+            </Grid.RowDefinitions>
+            <TextBlock Text="Logic Gate" />
+            <CheckBox x:Name="checkbox"
+                      x:FieldModifier="private"
+                      Grid.Column="1"
+                      Checked="Range_CheckBox_Checked"
+                      Unchecked="Range_CheckBox_Unchecked"/>
+            <TextBlock Grid.Row="1"
+                       Text="Range Type" />
+            <ComboBox x:Name="combobox"
+                      x:FieldModifier="private"
+                      SelectionChanged="combobox_SelectionChanged"
+                      Grid.Column="1"
+                      Grid.Row="1"
+                      Height="25"
+                      Margin="5,0,5,0" />
+            <UniformGrid Grid.ColumnSpan="2"
+                         Grid.Row="2"
+                         Rows="2">
+                <TextBlock Text="Minimum" />
+                <TextBox x:Name="min"
+                         x:FieldModifier="private"
+                         Margin="5,0,5,0">
+                    <TextBox.Text>
+                        <Binding Path="SelectedRange.Min"/>
+                    </TextBox.Text>
+                </TextBox>
+                <TextBlock Text="Maximum" />
+                <TextBox x:Name="max"
+                         x:FieldModifier="private"
+                         Margin="5,0,5,0">
+                    <TextBox.Text>
+                        <Binding Path="SelectedRange.Max" />
+                    </TextBox.Text>
+                </TextBox>
+            </UniformGrid>
+            <Popup x:Name="min_popup"
+                   x:FieldModifier="private"
+                   AllowsTransparency="True"
+                   IsOpen="False"
+                   Placement="Top"
+                   PopupAnimation="Slide"
+                   StaysOpen="True"
+                   Visibility="Visible"
+                   VerticalOffset="-1">
+                <Popup.PlacementTarget>
+                    <Binding ElementName="min" />
+                </Popup.PlacementTarget>
+                <Border Background="White"
+                        BorderBrush="Red"
+                        BorderThickness="1"
+                        CornerRadius="3"
+                        Margin="1,1,1,1">
+                    <TextBlock x:Name="min_popupText"
+                               x:FieldModifier="private"
+                               Foreground="Red"
+                               HorizontalAlignment="Center"
+                               VerticalAlignment="Center"
+                               Margin="0"
+                               TextWrapping="Wrap" />
+                </Border>
+            </Popup>
+            <Popup x:Name="max_popup"
+                   x:FieldModifier="private"
+                   AllowsTransparency="True"
+                   IsOpen="False"
+                   Placement="Top"
+                   PopupAnimation="Slide"
+                   StaysOpen="True"
+                   Visibility="Visible"
+                   VerticalOffset="-1">
+                <Popup.PlacementTarget>
+                    <Binding ElementName="max" />
+                </Popup.PlacementTarget>
+                <Border Background="White"
+                        BorderBrush="Red"
+                        BorderThickness="1"
+                        CornerRadius="3"
+                        Margin="1,1,1,1">
+                    <TextBlock x:Name="max_popupText"
+                               x:FieldModifier="private"
+                               Foreground="Red"
+                               HorizontalAlignment="Center"
+                               VerticalAlignment="Center"
+                               Margin="0"
+                               TextWrapping="Wrap" />
+                </Border>
+            </Popup>
+            <TextBlock Grid.Row="3"
+                       Text="New Range" />
+            <Button x:Name="button"
+                    x:FieldModifier="private"
+                    Grid.Column="1"
+                    Grid.Row="3"
+                    Content="New"
+                    Click="Range_Button_Click"/>
+        </Grid>
     </Grid>
 </ListViewItem>
