--- a/AutoCAD_Windows/AutoCAD_Windows/Property/PropertyEditor.xaml
+++ b/AutoCAD_Windows/AutoCAD_Windows/Property/PropertyEditor.xaml
@@ -108,9 +108,11 @@
         <Grid Grid.ColumnSpan="2"
               Grid.Row="1">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition MinWidth="200" />
+                <ColumnDefinition MinWidth="200"
+                                  Width="*" />
                 <ColumnDefinition Width="5" />
-                <ColumnDefinition MinWidth="200" />
+                <ColumnDefinition MinWidth="200"
+                                  Width="2*" />
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="20" />
@@ -128,17 +130,50 @@
                           Grid.RowSpan="2"
                           HorizontalAlignment="Center"
                           VerticalAlignment="Stretch"
+                          ClipToBounds="True"
                           Width="5"></GridSplitter>
             <TextBlock Grid.Column="2"
+                       Grid.ColumnSpan="2"
                        HorizontalAlignment="Center"
                        Text="Properties" />
             <ListView x:Name="Properties"
                       Grid.Column="2"
+                      Grid.ColumnSpan="2"
                       Grid.Row="1"
                       HorizontalContentAlignment="Stretch"
-                      Margin="5,10,10,10">
+                      Margin="5,10,10,10"
+                      ScrollViewer.CanContentScroll="False">
+                <ListView.ItemContainerStyle>
+                    <Style TargetType="{x:Type ListViewItem}">
+                        <Setter Property="Template">
+                            <Setter.Value>
+                                <ControlTemplate TargetType="{x:Type ListBoxItem}">
+                                    <Border Name="Border"
+                                            BorderBrush="{TemplateBinding BorderBrush}"
+                                            BorderThickness="{TemplateBinding BorderThickness}"
+                                            Background="{TemplateBinding Background}">
+                                        <ContentPresenter Content="{TemplateBinding Content}"
+                                                          ContentTemplate="{TemplateBinding ContentTemplate}"
+                                                          Margin="{TemplateBinding Padding}" />
+                                    </Border>
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+                        <Setter Property="Focusable"
+                                Value="False" />
+                        <Style.Triggers>
+                            <Trigger Property="IsMouseOver"
+                                     Value="True">
+                                <Setter Property="Background"
+                                        Value="Transparent" />
+                                <Setter Property="BorderBrush"
+                                        Value="Transparent" />
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                </ListView.ItemContainerStyle>
                 <ListView.ItemsSource>
-                    <Binding Path="PropertyItems" />
+                    <Binding Path="PropertyItems.Items" />
                 </ListView.ItemsSource>
             </ListView>
         </Grid>
