--- a/AutoCAD_Windows/AutoCAD_Windows/Property/PropertyCreator.xaml
+++ b/AutoCAD_Windows/AutoCAD_Windows/Property/PropertyCreator.xaml
@@ -1,4 +1,6 @@
-﻿<Window x:Class="WindowDictionary.Property.PropertyCreator"
+﻿<Window x:Name="Window"
+        x:FieldModifier="internal"
+        x:Class="WindowDictionary.Property.PropertyCreator"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,7 +8,6 @@
         xmlns:local="clr-namespace:WindowDictionary.Property"
         xmlns:converter="clr-namespace:WindowDictionary.Converters"
         mc:Ignorable="d"
-        BorderThickness="0"
         Height="450"
         ResizeMode="CanResizeWithGrip"
         MinHeight="700"
@@ -14,9 +15,21 @@
         WindowStartupLocation="CenterScreen"
         WindowStyle="None"
         Width="800">
+    <Window.Style>
+        <Style TargetType="{x:Type Window}">
+            <Setter Property="BorderThickness" 
+                    Value="0"/>
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding WindowState}" 
+                                         Value="Maximized">
+                    <Setter Property="BorderThickness" Value="7"/>
+                </DataTrigger>
+            </Style.Triggers>
+        </Style>
+    </Window.Style>
     <WindowChrome.WindowChrome>
         <WindowChrome CaptionHeight="0"
-                      ResizeBorderThickness="1" />
+                      ResizeBorderThickness="5" />
     </WindowChrome.WindowChrome>
     <Window.Resources>
         <ResourceDictionary>
@@ -44,6 +57,13 @@
                     </TextBlock.Text></TextBlock>
             </HierarchicalDataTemplate>
         </Grid.Resources>
+        <Border BorderBrush="#E0E0E0EE"
+                BorderThickness="1"
+                Grid.ColumnSpan="4"
+                Grid.RowSpan="4"/>
+        <Border Background="#FBFBFB"
+                BorderThickness="1"
+                Grid.ColumnSpan="4"/>
         <TextBlock Grid.ColumnSpan="3"
                    HorizontalAlignment="Center"
                    Text="Property Creator"/>
@@ -79,19 +99,70 @@
                 </Style>
             </UniformGrid.Resources>
             <Button x:Name="Window_Minimize_Button"
+                    Background="Transparent"
                     Click="Window_Minimize_Click"
                     ToolTip="Minimize"
                     Width="25">
-                <Image x:Name="imageMinimizeApp"
-                       Height="10"
-                       Source="../Application/minimizeAppIcon.ico" />
+                <Button.Content>
+                    <Line X1="0"
+                      X2="10"
+                      Y1="4"
+                      Y2="4"
+                      Visibility="Visible"
+                      StrokeThickness="1"
+                      Stroke="#000000"/>
+                </Button.Content>
             </Button>
             <Button x:Name="Window_Resize_Button"
+                    Background="Transparent"
                     Click="Window_Resize_Click"
                     Width="25">
-                <Image x:Name="imageResizeApp"
-                       Source="../Application/maximizeAppIcon.ico"
-                       Height="10" />
+                <Button.Style>
+                    <Style TargetType="{x:Type Button}"
+                           BasedOn="{StaticResource MiniButton}">
+                        <Setter Property="Content">
+                            <Setter.Value>
+                                <Polyline Stroke="#000000"
+                                          StrokeThickness="1">
+                                    <Polyline.Points>
+                                        <Point X="0.5" Y="0.5"/>
+                                        <Point X="9.5" Y="0.5"/>
+                                        <Point X="9.5" Y="9.5"/>
+                                        <Point X="0.5" Y="9.5"/>
+                                        <Point X="0.5" Y="0"/>
+                                    </Polyline.Points>
+                                </Polyline>
+                            </Setter.Value>
+                        </Setter>
+                        <Setter Property="ToolTip" 
+                                Value="Maximize"/>
+                        <Style.Triggers>
+                            <DataTrigger Binding="{Binding WindowState}" 
+                                         Value="Maximized">
+                                <Setter Property="Content">
+                                    <Setter.Value>
+                                        <Polyline Stroke="#000000"
+                                                  StrokeThickness="1">
+                                            <Polyline.Points>
+                                                <Point X="2.5" Y="2.5"/>
+                                                <Point X="2.5" Y="0.5"/>
+                                                <Point X="9.5" Y="0.5"/>
+                                                <Point X="9.5" Y="7.5"/>
+                                                <Point X="7.5" Y="7.5"/>
+                                                <Point X="7.5" Y="9.5"/>
+                                                <Point X="0.5" Y="9.5"/>
+                                                <Point X="0.5" Y="2.5"/>
+                                                <Point X="7.5" Y="2.5"/>
+                                                <Point X="7.5" Y="7.5"/>
+                                            </Polyline.Points>
+                                        </Polyline>
+                                    </Setter.Value>
+                                </Setter>
+                                <Setter Property="ToolTip" Value="Restore Down"/>
+                            </DataTrigger>
+                        </Style.Triggers>
+                    </Style>
+                </Button.Style>
             </Button>
             <Button x:Name="Window_Exit_Button"
                     Click="Cancel_Click"
@@ -104,9 +175,31 @@
                                 <ControlTemplate TargetType="{x:Type Button}">
                                     <Border x:Name="Border"
                                             Background="{TemplateBinding Background}">
-                                        <Image x:Name="imageExitApp"
-                                               Source="../Application/exitAppIcon.ico"
-                                               Height="10" />
+                                        <Grid HorizontalAlignment="Center"
+                                              VerticalAlignment="Center">
+                                            <Line x:Name="ExitLine1"
+                                                  Visibility="Visible"
+                                                  Stroke="#000000"
+                                                  StrokeStartLineCap="Triangle"
+                                                  StrokeEndLineCap="Triangle"
+                                                  StrokeThickness="1"
+                                                  X1="0"
+                                                  X2="10"
+                                                  Y1="0"
+                                                  Y2="10">
+                                            </Line>
+                                            <Line x:Name="ExitLine2"
+                                                  Visibility="Visible"
+                                                  Stroke="#000000"
+                                                  StrokeStartLineCap="Triangle"
+                                                  StrokeEndLineCap="Triangle"
+                                                  StrokeThickness="1"
+                                                  X1="0"
+                                                  X2="10"
+                                                  Y1="10"
+                                                  Y2="0">
+                                            </Line>
+                                        </Grid>
                                     </Border>
                                     <ControlTemplate.Triggers>
                                         <Trigger Property="IsMouseOver"
@@ -114,6 +207,12 @@
                                             <Setter Property="Background"
                                                     Value="Red"
                                                     TargetName="Border" />
+                                            <Setter Property="Stroke"
+                                                    TargetName="ExitLine1"
+                                                    Value="#FFFFFF"/>
+                                            <Setter Property="Stroke"
+                                                    TargetName="ExitLine2"
+                                                    Value="#FFFFFF"/>
                                         </Trigger>
                                     </ControlTemplate.Triggers>
                                 </ControlTemplate>
